--- a/resouces/css/default.css
+++ b/resouces/css/default.css
@@ -250,10 +250,12 @@ div, button, p, img {
 
 .third-content .controller-area {
     /* padding-top: 10px; */
-    text-align: center;
+    width: 100%;
     height: 10%;
-    text-align: center;
     font-size: 14px;
+    overflow-x: scroll;
+    white-space: nowrap;
+    padding-left: 5px;
 }
 
 .third-content .controller-area .indicator {
@@ -381,4 +383,11 @@ hr {
     100% { 
         opacity: 0;
     }
+}
+
+.image-thumb {
+    width: 50px;
+    height: 50px;
+    background-color: black;
+    display: inline-block;
 }
