--- a/resources/css/default.css
+++ b/resources/css/default.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Nanum+Myeongjo:400,700,800&display=swap&subset=korean');
-@import url('https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps&display=swap&subset=latin-ext');
+/* @import url('https://fonts.googleapis.com/css?family=Nanum+Myeongjo:400,700,800&display=swap&subset=korean'); */
+/* @import url('https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps&display=swap&subset=latin-ext'); */
 /* @import url('https://fonts.googleapis.com/css?family=Yeon+Sung&display=swap&subset=korean'); */
 /* @import url('https://fonts.googleapis.com/css?family=Nanum+Pen+Script&display=swap&subset=korean'); */
 
@@ -71,8 +71,8 @@ body p {
     mix-blend-mode: normal;
 }
 
-div, button, p, img {
-    touch-action: manipulation;
+div, button, p, img, span {
+    touch-action: manipulation !important;
 }
 
 .cardslider__cards {
@@ -89,7 +89,7 @@ div, button, p, img {
 .first-content {
     width: 100%;
     height: 100%;
-    background: url("/resouces/image/main.jpg") no-repeat;
+    background: url("/resources/image/main.jpg") no-repeat;
     background-size: auto 100%;
     background-position: center top;
     opacity: 0.9;
@@ -241,38 +241,49 @@ div, button, p, img {
 
 .third-content .photo-area {
     width: 100%;
-    height: 90%;
-    background: url("/resouces/image/photo-01.jpg") no-repeat;
+    height: calc(100% - 70px);
+    background: url("/resources/image/photo-01.jpg") no-repeat;
     background-size: 100% auto;
+    background-position: center;
     opacity: 0.9;
     mix-blend-mode: multiply;
 }
 
 .third-content .controller-area {
-    /* padding-top: 10px; */
     width: 100%;
-    height: 10%;
+    height: 70px;
     font-size: 14px;
-    overflow-x: scroll;
-    white-space: nowrap;
-    padding-left: 5px;
-    vertical-align: middle;
-    display: table;
 }
 
 .third-content .controller-area .indicator {
+    position: absolute;
     text-align: center;
+    display: block;
     font-size: 14px;
-    margin-top: 330px;
-    margin-left: 50px;
-    margin-right: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 32px;
+}
+
+.btn-prev-img {
+    left: 20px;
+    display: block;
+    position: absolute;
+    bottom: 25px;
+}
+
+.btn-next-img {
+    right: 20px;
+    display: block;
+    position: absolute;
+    bottom: 25px;
 }
 
 /* 네번째 컨텐츠 */
 .fourth-content {
     width: 100%;
     height: 100%;
-    background: url("/resouces/image/map.jpg") no-repeat;
+    background: url("/resources/image/map.jpg") no-repeat;
     background-size: 375px auto;
     background-position: 50% 160px;
     opacity: 0.9;
