--- a/resources/css/default.css
+++ b/resources/css/default.css
@@ -89,7 +89,7 @@ div, button, p, img, span {
 .first-content {
     width: 100%;
     height: 100%;
-    background: url("/resources/image/main-low.jpg") no-repeat;
+    background: url("/resources/image/main.jpg") no-repeat;
     background-size: auto 100%;
     background-position: center top;
     opacity: 0.9;
