--- a/resources/css/default.css
+++ b/resources/css/default.css
@@ -85,9 +85,9 @@ body p {
 .first-content {
     width: 100%;
     height: 100%;
-    background: url("/resources/image/main.jpg") no-repeat;
+    /* background: url("/resources/image/main.jpg") no-repeat;
     background-size: auto 100%;
-    background-position: center top;
+    background-position: center top; */
     opacity: 0.9;
     mix-blend-mode: multiply;
 }
