스탬프 수정

--- a/resources/css/default.css
+++ b/resources/css/default.css
@@ -138,6 +138,10 @@ body p {
     text-align: center;
     font-size: 22px;
     letter-spacing: 1px;
+
+    -webkit-mask-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/8399/grunge.png');
+    -webkit-mask-size: 944px 604px;
+    mix-blend-mode: multiply;
 }
 
 .first-content .date {
