이미지 로드 수정

--- a/resources/css/default.css
+++ b/resources/css/default.css
@@ -252,7 +252,7 @@ body p {
 }
 .third-content .photo-area-2 {
     width: 100%;
-    height: calc(100% - 70px);
+    height: 0;
     background: url("/resources/image/photo-02.jpg") no-repeat;
     background-size: 0 0;
     background-position: top center;
@@ -261,7 +261,7 @@ body p {
 }
 .third-content .photo-area-3 {
     width: 100%;
-    height: calc(100% - 70px);
+    height: 0;
     background: url("/resources/image/photo-03.jpg") no-repeat;
     background-size: 0 0;
     background-position: top center;
@@ -270,7 +270,7 @@ body p {
 }
 .third-content .photo-area-4 {
     width: 100%;
-    height: calc(100% - 70px);
+    height: 0;
     background: url("/resources/image/photo-04.jpg") no-repeat;
     background-size: 0 0;
     background-position: top center;
@@ -279,7 +279,7 @@ body p {
 }
 .third-content .photo-area-5 {
     width: 100%;
-    height: calc(100% - 70px);
+    height: 0;
     background: url("/resources/image/photo-05.jpg") no-repeat;
     background-size: 0 0;
     background-position: center;
@@ -288,7 +288,7 @@ body p {
 }
 .third-content .photo-area-6 {
     width: 100%;
-    height: calc(100% - 70px);
+    height: 0;
     background: url("/resources/image/photo-06.jpg") no-repeat;
     background-size: 0 0;
     background-position: top center;
@@ -297,7 +297,7 @@ body p {
 }
 .third-content .photo-area-7 {
     width: 100%;
-    height: calc(100% - 70px);
+    height: 0;
     background: url("/resources/image/photo-07.jpg") no-repeat;
     background-size: 0 0;
     background-position: top center;
@@ -306,7 +306,7 @@ body p {
 }
 .third-content .photo-area-8 {
     width: 100%;
-    height: calc(100% - 70px);
+    height: 0;
     background: url("/resources/image/photo-08.jpg") no-repeat;
     background-size: 0 0;
     background-position: top center;
@@ -315,7 +315,7 @@ body p {
 }
 .third-content .photo-area-9 {
     width: 100%;
-    height: calc(100% - 70px);
+    height: 0;
     background: url("/resources/image/photo-09.jpg") no-repeat;
     background-size: 0 0;
     background-position: top center;
@@ -324,7 +324,7 @@ body p {
 }
 .third-content .photo-area-10 {
     width: 100%;
-    height: calc(100% - 70px);
+    height: 0;
     background: url("/resources/image/photo-10.jpg") no-repeat;
     background-size: 0 0;
     background-position: top center;
@@ -333,7 +333,7 @@ body p {
 }
 .third-content .photo-area-11 {
     width: 100%;
-    height: calc(100% - 70px);
+    height: 0;
     background: url("/resources/image/photo-11.jpg") no-repeat;
     background-size: 0 0;
     background-position: top center;
@@ -342,7 +342,7 @@ body p {
 }
 .third-content .photo-area-12 {
     width: 100%;
-    height: calc(100% - 70px);
+    height: 0;
     background: url("/resources/image/photo-12.jpg") no-repeat;
     background-size: 0 0;
     background-position: top center;
