--- a/resources/css/default.css
+++ b/resources/css/default.css
@@ -140,7 +140,7 @@ body p {
     font-size: 22px;
     letter-spacing: 1px;
 
-    -webkit-mask-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/8399/grunge.png');
+    -webkit-mask-image: url('/resources/image/grunge.png');
     -webkit-mask-size: 944px 604px;
     mix-blend-mode: multiply;
 }
