--- a/resources/css/default.css
+++ b/resources/css/default.css
@@ -618,6 +618,8 @@ div, button, p, img, span {
     display: table; 
     width: 100% !important; 
     height: 100% !important;
+    background-color: #0e2f40;
+    position: absolute;
 }
 
 #div-loading p {
