이미지 로드 관련 수정

--- a/resources/css/default.css
+++ b/resources/css/default.css
@@ -630,3 +630,56 @@ div, button, p, img, span {
     font-weight: 400 !important;
     font-size: 16px !important;
 }
+
+.dot-flashing {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  border-radius: 5px;
+  background-color: rgb(255, 214, 138);
+  color: rgb(255, 214, 138);
+  animation: dotFlashing 1s infinite linear alternate;
+  animation-delay: .5s;
+  left: 50%;
+  top: calc(50% - 20px);
+  transform: translateX(-50%) translateY(calc(-50% - 20px));
+}
+
+.dot-flashing::before, .dot-flashing::after {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  top: 0;
+}
+
+.dot-flashing::before {
+  left: -15px;
+  width: 10px;
+  height: 10px;
+  border-radius: 5px;
+  background-color: rgb(255, 214, 138);
+  color: rgb(255, 214, 138);
+  animation: dotFlashing 1s infinite alternate;
+  animation-delay: 0s;
+}
+
+.dot-flashing::after {
+  left: 15px;
+  width: 10px;
+  height: 10px;
+  border-radius: 5px;
+  background-color: rgb(255, 214, 138);
+  color: rgb(255, 214, 138);
+  animation: dotFlashing 1s infinite alternate;
+  animation-delay: 1s;
+}
+
+@keyframes dotFlashing {
+  0% {
+    background-color: rgb(255, 214, 138);
+  }
+  50%,
+  100% {
+    background-color: rgb(250, 238, 216);
+  }
+}
