이미지 로드 관련 수정

--- a/resources/css/default.css
+++ b/resources/css/default.css
@@ -569,7 +569,7 @@ hr {
 .arrow:after {
     background: #fff;
     content: '';
-    display: none;
+    display: block;
     height: 2px; 
     position: absolute;
         top: 0;
