--- a/resources/css/default.css
+++ b/resources/css/default.css
@@ -19,9 +19,13 @@ html, body {
 body {
     font-family: 'Nanum Myeongjo', serif;
     background-color:#0e2f40;
-    color: #6b4618 !important;
+    color: #907048 !important;
     text-rendering: optimizeLegibility;
     margin: 0;
+}
+
+img {
+    border: none;
 }
 
 @media (max-width: 600px) {
@@ -78,18 +82,29 @@ body p {
 .first-content {
     width: 100%;
     height: 100%;
-    background: url("/resources/image/low/main.jpg") no-repeat;
-    background-size: auto 100%;
+}
+
+.first-content-image {
+    width: 100%;
+    height: 100vw;
+    background: url("/resources/image/main-3.jpg") no-repeat;
+    background-size: cover;
     background-position: center top;
     opacity: 0.9;
     mix-blend-mode: multiply;
 }
 
+.first-content-text {
+    top: 50%;
+    transform: translateY(-50%);
+    position: relative;   
+}
+
 .first-content .title {
     margin: 0;
-    font-weight: 800;
+    font-weight: 700;
     text-align: center;
-    font-size: 24px;
+    font-size: 20px;
     line-height: 1.0;
     letter-spacing: 2.5px;
     mix-blend-mode: normal;
@@ -110,6 +125,7 @@ body p {
     letter-spacing: 1px;
     mix-blend-mode: normal;
 }
+
 .first-content .stamp {
     width: 80px;
     height: 80px;
@@ -118,7 +134,7 @@ body p {
     color: #6b46189c !important;
     
     position: absolute;
-    bottom: 50px;
+    top: calc(100vw - 30px);
     right: 12px;
 
     border: double 10px #6b46189c;
@@ -138,10 +154,10 @@ body p {
 
 .first-content .date {
     margin: 0;
-    margin-top: 40px;
+    margin-top: 15px;
     font-weight: 700;
     text-align: center;
-    font-size: 16px;
+    font-size: 13px;
     letter-spacing: 1.5px;
     mix-blend-mode: normal;
 }
@@ -157,11 +173,10 @@ body p {
 }
 
 .first-content-detail {
-    padding-top: 55px;
-    /* padding-left: 25px; */
     opacity: none;
-    position: absolute;
+    position: relative;
     width: 100%;
+    height: calc(100% - 100vw);
 }
 
 /* 두번째 컨텐츠 */
@@ -183,7 +198,7 @@ body p {
 .second-content .poem {
     margin: 0;
     text-align: center;
-    font-size: 14px;
+    font-size: 13px;
     letter-spacing: 1.0px;
     line-height: 1.8;
     margin-bottom: 12px;
@@ -191,8 +206,8 @@ body p {
 
 .second-content .letter {
     text-align: center;
-    font-size: 16px;
-    letter-spacing: 1.2px;
+    font-size: 15px;
+    letter-spacing: 1.0px;
     margin-top:  35px;
     line-height: 2.0;
 }
@@ -200,7 +215,7 @@ body p {
 .second-content .parent-name {
     font-weight: 700;
     text-align: center;
-    font-size: 16px;
+    font-size: 15px;
     letter-spacing: 2px;
     line-height: 2.0;   
 }
@@ -208,9 +223,10 @@ body p {
 .second-content .child-name {
     font-weight: 400;
     text-align: center;
-    font-size: 14px;
+    font-size: 13px;
     letter-spacing: 2px;
     line-height: 2.0;   
+    color: rgba(162, 125, 64, 0.74);
 }
 
 .second-content-shuttle {
@@ -232,111 +248,103 @@ body p {
     height: 100%;
 }
 
-.third-content .photo-area-1{
-    width: 100%;
+.photo-div {
     height: calc(100% - 70px);
-    background: url("/resources/image/low/photo-01.jpg") no-repeat;
-    background-size: 100% auto;
-    background-position: top center;
+    width: 100%;
+}
+
+.third-content .photo-area-1{
+    height: auto;
+    max-width: 100%;
+    vertical-align: middle;
     opacity: 0.9;
     mix-blend-mode: multiply;
 }
 .third-content .photo-area-2 {
-    width: 100%;
-    height: 0;
-    background: url("/resources/image/low/photo-02.jpg") no-repeat;
-    background-size: 0 0;
-    background-position: top center;
+    display: none;
+    height: auto;
+    max-width: 100%;
+    vertical-align: middle;
     opacity: 0.9;
     mix-blend-mode: multiply;
 }
 .third-content .photo-area-3 {
-    width: 100%;
-    height: 0;
-    background: url("/resources/image/low/photo-03.jpg") no-repeat;
-    background-size: 0 0;
-    background-position: top center;
+    display: none;
+    height: auto;
+    max-width: 100%;
+    vertical-align: middle;
     opacity: 0.9;
     mix-blend-mode: multiply;
 }
 .third-content .photo-area-4 {
-    width: 100%;
-    height: 0;
-    background: url("/resources/image/low/photo-04.jpg") no-repeat;
-    background-size: 0 0;
-    background-position: top center;
+    display: none;
+    height: auto;
+    max-width: 100%;
+    vertical-align: middle;
     opacity: 0.9;
     mix-blend-mode: multiply;
 }
 .third-content .photo-area-5 {
-    width: 100%;
-    height: 0;
-    background: url("/resources/image/low/photo-05.jpg") no-repeat;
-    background-size: 0 0;
-    background-position: center;
+    display: none;
+    height: auto;
+    max-width: 100%;
+    vertical-align: middle;
     opacity: 0.9;
     mix-blend-mode: multiply;
 }
 .third-content .photo-area-6 {
-    width: 100%;
-    height: 0;
-    background: url("/resources/image/low/photo-06.jpg") no-repeat;
-    background-size: 0 0;
-    background-position: top center;
+    display: none;
+    height: auto;
+    max-width: 100%;
+    vertical-align: middle;
     opacity: 0.9;
     mix-blend-mode: multiply;
 }
 .third-content .photo-area-7 {
-    width: 100%;
-    height: 0;
-    background: url("/resources/image/low/photo-07.jpg") no-repeat;
-    background-size: 0 0;
-    background-position: top center;
+    display: none;
+    height: auto;
+    max-width: 100%;
+    vertical-align: middle;
     opacity: 0.9;
     mix-blend-mode: multiply;
 }
 .third-content .photo-area-8 {
-    width: 100%;
-    height: 0;
-    background: url("/resources/image/low/photo-08.jpg") no-repeat;
-    background-size: 0 0;
-    background-position: top center;
+    display: none;
+    height: auto;
+    max-width: 100%;
+    vertical-align: middle;
     opacity: 0.9;
     mix-blend-mode: multiply;
 }
 .third-content .photo-area-9 {
-    width: 100%;
-    height: 0;
-    background: url("/resources/image/low/photo-09.jpg") no-repeat;
-    background-size: 0 0;
-    background-position: top center;
+    display: none;
+    height: auto;
+    max-width: 100%;
+    vertical-align: middle;
     opacity: 0.9;
     mix-blend-mode: multiply;
 }
 .third-content .photo-area-10 {
-    width: 100%;
-    height: 0;
-    background: url("/resources/image/low/photo-10.jpg") no-repeat;
-    background-size: 0 0;
-    background-position: top center;
+    display: none;
+    height: auto;
+    max-width: 100%;
+    vertical-align: middle;
     opacity: 0.9;
     mix-blend-mode: multiply;
 }
 .third-content .photo-area-11 {
-    width: 100%;
-    height: 0;
-    background: url("/resources/image/low/photo-11.jpg") no-repeat;
-    background-size: 0 0;
-    background-position: top center;
+    display: none;
+    height: auto;
+    max-width: 100%;
+    vertical-align: middle;
     opacity: 0.9;
     mix-blend-mode: multiply;
 }
 .third-content .photo-area-12 {
-    width: 100%;
-    height: 0;
-    background: url("/resources/image/low/photo-12.jpg") no-repeat;
-    background-size: 0 0;
-    background-position: top center;
+    display: none;
+    height: auto;
+    max-width: 100%;
+    vertical-align: middle;
     opacity: 0.9;
     mix-blend-mode: multiply;
 }
@@ -439,15 +447,17 @@ body p {
 .fourth-content .title {
     font-weight: bold;
     text-align: center;
-    font-size: 20px;
+    font-size: 15px;
     letter-spacing: 2px;
     margin-bottom:  25px;
+    color: rgba(162, 125, 64, 0.74);
 }
 
 .fourth-content .location {
     text-align: center;
-    font-size: 14px;
+    font-size: 17px;
     line-height: 1.5;
+    letter-spacing: 2px;
 }
 
 .fourth-content .address {
@@ -472,9 +482,10 @@ body p {
 .fifth-content .title {
     font-weight: bold;
     text-align: center;
-    font-size: 20px;
+    font-size: 15px;
     letter-spacing: 2px;
     margin-bottom:  25px;
+    color: rgba(162, 125, 64, 0.74);
 }
 
 .fifth-content .date {
@@ -483,7 +494,7 @@ body p {
     letter-spacing: 1.2px;
     margin: 0;
     margin-top: 40px;
-    line-height: 2.5;
+    line-height: 1.8;
     margin-bottom: 40px;
 }
 
