--- a/resources/css/default.css
+++ b/resources/css/default.css
@@ -87,7 +87,7 @@ body p {
 .first-content-image {
     width: 100%;
     height: 100vw;
-    background: url("/resources/image/main-3.jpg") no-repeat;
+    background: url("/resources/image/main.jpg") no-repeat;
     background-size: cover;
     background-position: center top;
     opacity: 0.9;
