--- a/resources/css/default.css
+++ b/resources/css/default.css
@@ -562,7 +562,7 @@ hr {
 
 /* arrow */
 .arrow {
-    display: none;
+    display: block;
     opacity: 0;
     position: absolute;
         left: calc(50% - 10px);
