--- a/resources/css/default.css
+++ b/resources/css/default.css
@@ -87,6 +87,7 @@ body p {
 .first-content-image {
     width: 100%;
     height: 100vw;
+    max-height: 345px;
     background: url("/resources/image/main.jpg") no-repeat;
     background-size: cover;
     background-position: center top;
@@ -134,7 +135,7 @@ body p {
     color: #6b46189c !important;
     
     position: absolute;
-    top: calc(100vw - 30px);
+    top: -30px;
     right: 12px;
 
     border: double 10px #6b46189c;
@@ -177,6 +178,7 @@ body p {
     position: relative;
     width: 100%;
     height: calc(100% - 100vw);
+    min-height: calc(100% - 345px);
 }
 
 /* 두번째 컨텐츠 */
