--- a/resources/css/default.css
+++ b/resources/css/default.css
@@ -433,7 +433,7 @@ body p {
     line-height: 1.8;
 }
 
-.fourth-content-shuttle button {
+.fourth-content-shuttle .custom-button {
     width: 50px;
     height: 50px;
     background-color: rgba(197, 152, 92, 0.3);
@@ -504,8 +504,9 @@ body p {
 }
 
 .fifth-content table {
+    overflow-y: scroll;
     margin-top: 30px;
-    width: 100%;
+    width: 95%;
     height: 200px;
     padding: 0px 30px;
     text-align: center;
@@ -534,6 +535,106 @@ body p {
     padding: 0px 3px;
 }
 
+.sixth-content {
+    width: 100%;
+    height: 100%;
+    
+}
+
+.sixth-content-detail {
+    width: 100%;
+    height: 100%;
+    padding-top: 50px;
+}
+
+.sixth-content .title {
+    font-weight: bold;
+    text-align: center;
+    font-size: 15px;
+    letter-spacing: 2px;
+    margin-bottom:  35px;
+    color: rgba(162, 125, 64, 0.74);
+}
+
+.sixth-content-reply {
+    text-align: center;
+    width: 100%;
+    height: calc(100% - 77px);
+}
+
+.sixth-content-reply .reply-list {
+    width: 100%;
+    height: calc(100% - 120px);
+    overflow-y: scroll;
+}
+
+.sixth-content-inputgroup {
+    width: 85%;
+    height: 100%;
+    margin: 0 auto;
+}
+
+.sixth-content-inputgroup input {
+    display: none;
+    margin-top: 10px;
+    width: calc(100% - 120px);
+    margin-right: 10px;
+    background-color: transparent;
+    border: none;
+    border-bottom: 2px solid rgba(197, 152, 92, 0.3);
+    border-radius: unset;
+    font-size: 14px;
+}
+
+.sixth-content-inputgroup .custom-button{
+    display: none;
+    margin-top: 10px;
+}
+
+.sixth-content-inputgroup p {
+    display: none;
+    font-size: 10px;
+    font-family: 'Nanum Myeongjo', serif;
+}
+
+/* .reply-list ::-webkit-scrollbar {
+    -webkit-appearance: border 1px solid black;
+} */
+
+.sixth-content-reply table {
+    width: 80%;
+    height: 100%;    
+    margin: 0 auto;
+}
+
+.sixth-content-reply table tbody {
+    vertical-align: top;
+}
+
+.sixth-content-reply table tr {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.sixth-content-inputgroup {
+    height: 70px;
+}
+
+.sixth-content-reply .reply-name {
+    width: 30%;
+    text-align: center;
+    padding: 5px;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.sixth-content-reply .reply-contents {
+    width: 70%;
+    text-align: left;
+    padding: 5px;
+    font-size: 14px;
+}
+
 .font-15 {
     font-size: 15;
 }
@@ -548,7 +649,7 @@ div
   user-select: none;
 }
 
-button {
+.custom-button {
     background-color: rgba(197, 152, 92, 0.3);
     border: none;
     color: #805522 !important;
