--- a/resources/css/default.css
+++ b/resources/css/default.css
@@ -1,6 +1,7 @@
 * {
     box-sizing: border-box;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0) !important;
+    -webkit-touch-callout: none !important;
 }
 
 html, body {
